--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,15 @@
     "build": "cd client && npm install && npm run build"
   },
   "engines": {
-  	"node": "18.20.2"
+    "node": "18.20.2"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "config": "^3.3.11",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.13"
+  }
 }
