--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.3.11",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
     "nodemailer": "^6.9.13"
